--- a/data_dirs.env
+++ b/data_dirs.env
@@ -1,7 +1,8 @@
 i=0
 DATA_DIRS[((i++))]="etc"
-DATA_DIRS[((i++))]="rules"
+DATA_DIRS[((i++))]="ruleset"
 DATA_DIRS[((i++))]="logs"
 DATA_DIRS[((i++))]="stats"
 DATA_DIRS[((i++))]="queue"
+DATA_DIRS[((i++))]="var/db"
 export DATA_DIRS
